--- a/references/references.bib
+++ b/references/references.bib
@@ -1,9 +1,22 @@
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-           Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2019},
-  url = {https://www.R-project.org},
+@article{
+catastrophicforgetting,
+author = {James Kirkpatrick  and Razvan Pascanu  and Neil Rabinowitz  and Joel Veness  and Guillaume Desjardins  and Andrei A. Rusu  and Kieran Milan  and John Quan  and Tiago Ramalho  and Agnieszka Grabska-Barwinska  and Demis Hassabis  and Claudia Clopath  and Dharshan Kumaran  and Raia Hadsell },
+title = {Overcoming catastrophic forgetting in neural networks},
+journal = {Proceedings of the National Academy of Sciences},
+volume = {114},
+number = {13},
+pages = {3521-3526},
+year = {2017},
+doi = {10.1073/pnas.1611835114},
+URL = {https://www.pnas.org/doi/abs/10.1073/pnas.1611835114},
+eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.1611835114},
+abstract = {The ability to learn tasks in a sequential fashion is crucial to the development of artificial intelligence. Until now neural networks have not been capable of this and it has been widely thought that catastrophic forgetting is an inevitable feature of connectionist models. We show that it is possible to overcome this limitation and train networks that can maintain expertise on tasks that they have not experienced for a long time. Our approach remembers old tasks by selectively slowing down learning on the weights important for those tasks. We demonstrate our approach is scalable and effective by solving a set of classification tasks based on a hand-written digit dataset and by learning several Atari 2600 games sequentially.}}
+
+@article{
+whisper,
+author = {Alec Radford, Jong Wook Kim, Tao Xu, Greg Brockman, Christine McLeavey, Ilya Sutskever},
+title = {Robust Speech Recognition via Large-Scale Weak Supervision},
+journal = {OpenAI},
+year = {2022},
+URL = {"https://cdn.openai.com/papers/whisper.pdf"},
 }
